fixed translucent backdrop z-index in header

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,6 +2,7 @@
 
 header {
   position: fixed;
+  z-index: 9999;
   top: -3vh;
   flex-direction: column;
   width: 100%;
@@ -9,6 +10,7 @@ header {
   top: 0;
   background-color: #fff;
   opacity: 90%;
+  outline: 1px solid red;
 }
 
 header a {
@@ -31,7 +33,6 @@ header a:hover {
   padding-bottom: 3vh;
   margin-right: 7vh;
   padding-left: 2vh;
-
 }
 
 #fullscreen-nav {
